feat(doc): add swagger doc for spend
